Homepage horizontal scrollbar fixed, theme based cpt name changed and Theme display name corrected

--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,7 @@ body {
 }
 
 .dsignfly-features-container {
-  width: 100vw;
+  width: 100%;
   background-image: url("../assets/images/home/features-repeatable-bg.png");
   background-repeat: repeat;
 }
