--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -202,7 +202,7 @@
  }
 
  .dsignfly-features-container {
-    width: 100vw;
+    width: 100%;
 
      background: {
          image: url('../assets/images/home/features-repeatable-bg.png');
